[gd_scene load_steps=12 format=2]

[ext_resource path="res://island.tscn" type="PackedScene" id=1]
[ext_resource path="res://gd/mqtt.gd" type="Script" id=2]
[ext_resource path="res://gd/Playground.gd" type="Script" id=4]
[ext_resource path="res://Materials/depth_buffer/depth_buffer_material.tres" type="Material" id=6]
[ext_resource path="res://objects/FinishLine1.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/FinishLine.gd" type="Script" id=8]
[ext_resource path="res://objects/Fire.tscn" type="PackedScene" id=9]

[sub_resource type="ProceduralSky" id=10]
sky_top_color = Color( 0.443137, 0.6, 0.960784, 1 )
sky_horizon_color = Color( 0.690196, 0.813113, 0.921569, 1 )
sky_energy = 2.47
ground_bottom_color = Color( 0.690196, 0.760784, 0.921569, 1 )
ground_horizon_color = Color( 0.690196, 0.760784, 0.921569, 1 )
sun_latitude = 50.0
sun_longitude = -20.0
sun_angle_max = 30.0
sun_energy = 27.13

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 10 )
ambient_light_color = Color( 0.5, 0.5, 0.5, 1 )
ambient_light_energy = 2.8
ambient_light_sky_contribution = 0.2

[sub_resource type="PlaneMesh" id=11]
size = Vector2( 10000, 10000 )
subdivide_width = 1000
subdivide_depth = 1000
center_offset = Vector3( 500, 20, 500 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 0.230752, 0.287918 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.974885, -0.0731331, -0.210357, 0.119979, -0.623294, 0.772729, -0.187627, -0.77856, -0.598866, 0, 79.7674, 0 )
light_color = Color( 0.964706, 0.843137, 0.698039, 1 )
light_energy = 2.148
light_indirect_energy = 0.0
light_specular = 2.496
shadow_bias = -7.79

[node name="Water" type="MeshInstance" parent="."]
transform = Transform( 0.908792, 0, 0.417249, 0, 1, 0, -0.417249, 0, 0.908792, 58.874, -39, -345.902 )
mesh = SubResource( 11 )
software_skinning_transform_normals = false
material/0 = ExtResource( 6 )

[node name="DebugVehicleSpawn" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 9, 5 )
far = 8000.0

[node name="VehicleSpawn" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 9, 5 )
far = 8000.0

[node name="island" parent="." instance=ExtResource( 1 )]
transform = Transform( -95.6305, 0, -29.2372, 0, 100, 0, 29.2372, 0, -95.6305, 380, -19, -230 )

[node name="FinishLine2" type="RigidBody" parent="."]
transform = Transform( -1.18729, -0.050207, -0.166779, -0.041822, 1.19763, -0.0628032, 0.169077, -0.0563256, -1.18669, -7, 1.3, -20 )
mode = 1
mass = 0.04
contacts_reported = 1
contact_monitor = true
script = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="FinishLine2"]
transform = Transform( -9.84808, 2.04891e-08, 0.173648, 1.23866e-07, 3, -3.72529e-09, -1.73648, 1.49012e-08, -0.984808, 1.5024, 1.46414, -4.31211 )
shape = SubResource( 12 )

[node name="FinishLine2" parent="FinishLine2" instance=ExtResource( 7 )]
transform = Transform( -0.492404, 2.18861e-08, 0.0868242, -8.6613e-08, 0.500002, -1.30385e-07, -0.0868242, -1.15484e-07, -0.492404, 90.4829, -64.0002, 9.50969 )

[node name="Fire" parent="FinishLine2" instance=ExtResource( 9 )]
transform = Transform( -2.95274, -0.105003, 0.519923, -0.139425, 2.99087, -0.187783, -0.511768, -0.208988, -2.94863, 12.436, 10, -3.5 )

[node name="Fire2" parent="FinishLine2" instance=ExtResource( 9 )]
transform = Transform( -2.95274, -0.105003, 0.519923, -0.139425, 2.99087, -0.187783, -0.511768, -0.208988, -2.94863, -9.455, 10, -6.777 )

[node name="CamPosition" type="Camera" parent="."]
transform = Transform( 1, 4.44089e-16, 1.49012e-08, 0, 1, -2.98023e-08, -1.49012e-08, 2.98023e-08, 1, -2, 8, 5 )
far = 8000.0

[node name="mqtt" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="CrossedFinishLine" from="FinishLine2" to="." method="_on_FinishLine_CrossedFinishLine"]
[connection signal="body_entered" from="FinishLine2" to="FinishLine2" method="_on_FinishLine_body_entered"]
